fixing mobile navbar jumping

--- a/sass/club.scss
+++ b/sass/club.scss
@@ -623,9 +623,9 @@ section {
     // Navigation
     nav {
         width: 100%;
-        height: auto;
-        position: static;
         padding-bottom: 0;
+        height: auto;
+        background-color: $off-white;
 
         a, a.btn-light {
             display: none;
@@ -661,6 +661,6 @@ section {
 
     // Main content
     main {
-        padding-left: 3.5rem;
+        padding: 7.5rem 3.5rem 1.75rem;
     }
 }
